--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
     <h2 class="subtitulo2" > algo del juego </h2>
     <p class="text1"> este juego es bastante dificil por su elevada difilcultad y variedad de enemigos y jefes </p>
-    <p class="text2"> algunos ejemplos </p>
+    <p class="text2"> por cuestiones de momento no se puede poner peleas asi que aqui tienes un vistaso </p>
     <center>
-        <video width="500"controls src="reypesadilla.mp4.mp4"></video>
-        <video src="hermanas de batalla.mp4.mp4"width="500"controls></video>
-        <video src="destello absoluto.mp4.mp4"width="500"controls></video>
+        <video width="500"controls src="vistaso de HK.mp4"></video>
     </center>
-    <p class="text3" > despues de ver esos videos podes ver que una gran dificultad </p>
+    <p class="text3" > despues de ese vistaso vamos a lo siguiente </p>
     <p class="text4" > aqui unas imagenes de algunas cosas </p>
 
 
